@startuml
'https://plantuml.com/class-diagram
abstract class Game {
+ enemyFactory:EnemyFactory
}

abstract class EnemyFactory{
    + callEnemy(String type):AbstractAircraft
    - {abstract}createEnemy(String type):AbstractAircraft
    - {abstract}createEnemy(String type,double damageTimes, double healthTimes):AbstractAircraft
}
Game <-- EnemyFactory
EnemyFactory<|-- EasyFactory
EnemyFactory<|-- NormalFactory
EnemyFactory<|-- HardFactory

class EasyFactory{
    - createEnemy(String type):AbstractAircraft
    - createEnemy(String type,double damageTimes, double healthTimes):AbstractAircraft
}
class NormalFactory{
    - createEnemy(String type):AbstractAircraft
        - createEnemy(String type,double damageTimes, double healthTimes):AbstractAircraft

}
class HardFactory{
    - createEnemy(String type):AbstractAircraft
        - createEnemy(String type,double damageTimes, double healthTimes):AbstractAircraft
}

abstract class AbstractAircraft{
}
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy

EasyFactory ..> MobEnemy
EasyFactory ..>  EliteEnemy
EasyFactory ..>  BossEnemy

NormalFactory ..>  MobEnemy
NormalFactory ..>  EliteEnemy
NormalFactory ..>  BossEnemy

HardFactory ..>  MobEnemy
HardFactory ..>  EliteEnemy
HardFactory ..>  BossEnemy

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<Bullet>
    + update(Game mg):void
}

class EliteEnemy
{

    - direction:int
    - shootNum:int
    - power:int
    - shootStrategy:AbstractShootStrategy
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootnum, int power)
    + forward():void
    + shoot():List<Bullet>
    + setStrategy(AbstractShootStrategy shootStrategy):void\
        + update(Game mg):void
}

class BossEnemy
{

    - direction:int
    - shootNum:int
    - power:int
    - shootStrategy:AbstractShootStrategy
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootnum, int power)
    + forward():void
    + shoot():List<Bullet>
    + setStrategy(AbstractShootStrategy shootStrategy):void
        + update(Game mg):void
}

@enduml